@startuml Credit Score System ER Diagram

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) #x#

skinparam linetype ortho
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

table(users) {
    primary_key(id): UUID
    email: VARCHAR(255)
    password_hash: VARCHAR(255)
    first_name: VARCHAR(100)
    last_name: VARCHAR(100)
    phone_number: VARCHAR(20)
    role: ENUM
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

table(transactions) {
    primary_key(id): UUID
    foreign_key(user_id): UUID
    foreign_key(category_id): UUID
    amount: DECIMAL(15,2)
    type: ENUM
    description: TEXT
    transaction_date: DATE
    status: ENUM
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

table(categories) {
    primary_key(id): UUID
    name: VARCHAR(100)
    type: ENUM
    description: TEXT
    icon: VARCHAR(50)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

table(credit_scores) {
    primary_key(id): UUID
    foreign_key(user_id): UUID
    score: INTEGER
    calculation_date: TIMESTAMP
    valid_until: TIMESTAMP
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

table(score_factors) {
    primary_key(id): UUID
    foreign_key(credit_score_id): UUID
    factor_name: VARCHAR(100)
    factor_value: FLOAT
    weight: FLOAT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

table(transaction_analytics) {
    primary_key(id): UUID
    foreign_key(user_id): UUID
    period: VARCHAR(20)
    total_income: DECIMAL(15,2)
    total_expenses: DECIMAL(15,2)
    savings_rate: FLOAT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

table(category_breakdown) {
    primary_key(id): UUID
    foreign_key(transaction_analytics_id): UUID
    foreign_key(category_id): UUID
    amount: DECIMAL(15,2)
    percentage: FLOAT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

' Relationships
users "1" -- "0..*" transactions
users "1" -- "0..*" credit_scores
users "1" -- "0..*" transaction_analytics
categories "1" -- "0..*" transactions
credit_scores "1" -- "0..*" score_factors
transaction_analytics "1" -- "0..*" category_breakdown
categories "1" -- "0..*" category_breakdown

@enduml 